--- a/assignment/index.html
+++ b/assignment/index.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Unit 5, Part 2 - HTML/CSS Practice</title>
+	  <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
-    <h1>Unit 5, Part 2 - HTML/CSS Practice</h1>
-    <p>See console for output.</p>
+    <header class=header>
+      <h1>Unit 5, Part 2 - HTML/CSS Practice</h1>
+      <h2>Steven Petersen's record shop</h2>
+    </header>
+    <main class=main>
+      <p>See console for output.</p>
+    </main>
     <!-- Create an unordered list with any questions you have -->
   </body>
 </html>
