Changed class names per Liz's request

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -6,11 +6,11 @@
 	  <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
-    <header class=header>
+    <header class=notAnOctothorpe>
       <h1>Unit 5, Part 2 - HTML/CSS Practice</h1>
       <h2>Steven Petersen's record shop</h2>
     </header>
-    <main class=main>
+    <main class=alsoNotAnOctothorpe>
       <p>See console for output.</p>
     </main>
     <!-- Create an unordered list with any questions you have -->
